# pytest-localstack

./: .bumpversion.cfg  .codecov.yml  .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt  using.rst
docs/internals/: hooks.rst  index.rst  session.rst
docs/internals/contrib/: boto3.rst  botocore.rst  index.rst
examples/sync_buckets/: Pipfile  README.md  sync_buckets.py  test_sync_buckets.py
pytest_localstack/: __init__.py  _version.py  botocore.py  compat.py  constants.py  container.py  exceptions.py  hookspecs.py  patch.py  plugin.py  service_checks.py  session.py  utils.py
pytest_localstack/contrib/: boto3.py  botocore.py
tests/: .flake8  __init__.py  conftest.py  test_dummy.py  utils.py
tests/functional/: conftest.py  test_container.py  test_session.py
tests/functional/test_patch_fixture/: test_README.py  test_services_available.py
tests/functional/test_service_fixture/: test_README.py  test_services_available.py
tests/integration/: test_plugin.py
tests/integration/test_contrib/: test_boto3.py  test_botocore.py
tests/unit/: test_container.py  test_patch.py  test_session.py  test_utils.py
