[bdist_wheel]
universal = 1


[metadata]
license-file = LICENSE


[tool:pytest]
norecursedirs = .* build dist *.egg tmp*
testpaths = tests/unit tests/integration tests/functional pytest_localstack examples
timeout = 300
addopts =
	-W error
	--doctest-glob='*.rst'
	--doctest-glob='*.md'
	--doctest-modules

[isort]
skip_glob = */.venv/*
not_skip = __init__.py

# Structure
sections = FUTURE,STDLIB,THIRDPARTY,TESTING,FIRSTPARTY,LOCALFOLDER
default_section = THIRDPARTY
known_testing = hypothesis,pytest,tests
known_first_party = pytest_localstack

# Import Style
line_length = 88
force_grid_wrap = false
use_parentheses = true
include_trailing_comma = true
combine_as_imports = true

# Multiline Import Style: vertical hanging indent
multi_line_output = 3
